--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,31 +1,20 @@
 // main.scss # Manifest File
-
-// Color Schemes
-// First Color Scheme
-$white: #FFF;
-// Second Color Scheme
-$black: #000000;
-$sable: #060606;
-$charcoal: #2e1503;
-// Third Color Scheme
-$tangerine: #FFAF6D;
-$orange: #FFA500;
-
-// Typographies
-$ubuntu: 'Ubuntu', sans-serif;
-$poppins: 'Poppins', sans-serif;;
-
-// Font Weights
-$regular: 400;
-$bold: 700;
-
-// Font Sizes
-$xxxxx-large: 50px;
-$xxxx-large: 45px;
-$xxx-large: 40px;
-$xx-large: 35px;
-$x-large: 30px;
-$large: 20px;
-$medium: 16px;
-$small: 14px;
-$x-small: 12px;
+// Abtstracts
+@import 'abstracts/variables';
+@import 'abstracts/mixins';
+// Vendors
+// Base
+@import 'base/base';
+@import 'base/reset';
+@import 'base/typography';
+@import 'base/animations';
+// Layout
+@import 'layout/navbar';
+@import 'layout/hero';
+@import 'layout/main';
+@import 'layout/footer';
+// Components
+@import 'components/inputs';
+@import 'components/buttons';
+// Pages
+// Theme
